tests/ui/readme.stderr
error[E0594]: cannot assign to data in a `&` reference
  --> $DIR/readme.rs:21:5
   |
21 |     s.n += 1;
   |     ^^^^^^^^ cannot assign

error: aborting due to previous error

For more information about this error, try `rustc --explain E0594`.
